@@ -1,7 +1,7 @@
 package no.einnsyn.apiv3.responses;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import org.springframework.context.MessageSourceResolvable;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.HttpStatusCode;
@@ -9,23 +9,48 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.http.converter.HttpMessageNotReadableException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
+import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.context.request.WebRequest;
+import org.springframework.web.method.annotation.HandlerMethodValidationException;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
+import no.einnsyn.apiv3.exceptions.UnauthorizedException;
 
 @ControllerAdvice
 public class CustomExceptionHandler extends ResponseEntityExceptionHandler {
 
+  // TODO: Improve this. (Log with stacktrace, return informative error message to client)
+  @ExceptionHandler(Exception.class)
+  public ResponseEntity<Object> exception(Exception ex) {
+    System.out.println(ex.toString());
+    System.out.println(ex.getMessage());
+    ex.printStackTrace();
+
+    HttpStatus status;
+
+    if (ex instanceof IllegalArgumentException) {
+      status = HttpStatus.BAD_REQUEST;
+    } else if (ex instanceof UnauthorizedException) {
+      status = HttpStatus.UNAUTHORIZED;
+    } else {
+      status = HttpStatus.INTERNAL_SERVER_ERROR;
+    }
+
+    final ApiError apiError = new ApiError(status, ex.getMessage(), null, null);
+    return handleExceptionInternal(ex, apiError, null, apiError.getStatus(), null);
+  }
+
   /**
-   * Validation errors
+   * Input field validation errors.
    */
+  @Override
   protected ResponseEntity<Object> handleMethodArgumentNotValid(MethodArgumentNotValidException ex,
       HttpHeaders headers, HttpStatusCode status, WebRequest request) {
 
-    List<FieldValidationError> fieldErrors = ex.getFieldErrors().stream().map(e -> {
-      return new FieldValidationError(e.getField(),
-          e.getRejectedValue() == null ? null : e.getRejectedValue().toString(),
-          e.getDefaultMessage());
-    }).collect(Collectors.toList());
+    List<FieldValidationError> fieldErrors = ex.getFieldErrors().stream()
+        .map(e -> new FieldValidationError(e.getField(),
+            e.getRejectedValue() == null ? null : e.getRejectedValue().toString(),
+            e.getDefaultMessage()))
+        .toList();
 
     final ApiError apiError = new ApiError(HttpStatus.BAD_REQUEST, null, null, fieldErrors);
 
@@ -34,15 +59,48 @@ public class CustomExceptionHandler extends ResponseEntityExceptionHandler {
 
 
   /**
-   * JSON parse errors
+   * Handle path-variable validation errors. Most likely non-existent IDs.
    */
-  protected ResponseEntity<Object> handleHttpMessageNotReadable(HttpMessageNotReadableException ex,
-      HttpHeaders headers, HttpStatusCode status, WebRequest request) {
+  @Override
+  protected ResponseEntity<Object> handleHandlerMethodValidationException(
+      HandlerMethodValidationException ex, HttpHeaders headers, HttpStatusCode status,
+      WebRequest request) {
 
-    List<String> errors = List.of(ex.getLocalizedMessage());
-    final ApiError apiError = new ApiError(HttpStatus.BAD_REQUEST, null, errors, null);
+    boolean notFound = false;
+    for (MessageSourceResolvable error : ex.getAllErrors()) {
+      var defaultMessage = error.getDefaultMessage();
+      if (defaultMessage != null && defaultMessage.contains("not found")) {
+        notFound = true;
+      }
+    }
+
+    ApiError apiError;
+    if (notFound) {
+      apiError =
+          new ApiError(HttpStatus.NOT_FOUND, "The requested resource was not found.", null, null);
+    } else {
+      apiError = new ApiError(HttpStatus.BAD_REQUEST, null, null, null);
+    }
 
     return handleExceptionInternal(ex, apiError, headers, apiError.getStatus(), request);
   }
+
+
+  /**
+   * JSON parse errors
+   */
+  @Override
+  protected ResponseEntity<Object> handleHttpMessageNotReadable(HttpMessageNotReadableException ex,
+      HttpHeaders headers, HttpStatusCode status, WebRequest request) {
+
+    List<String> errors = List.of(ex.getLocalizedMessage()); // We don't want to expose error
+    // messages to the client.
+    final ApiError apiError =
+        new ApiError(HttpStatus.BAD_REQUEST, "Could not parse the request body.", errors, null);
+
+    return handleExceptionInternal(ex, apiError, headers, apiError.getStatus(), request);
+  }
+
+
 
 }
